syntax = "proto3";

package adhocprofiles.v1;

import "types/v1/types.proto";

service AdHocProfileService {
  rpc Upload(AdHocProfilesUploadRequest) returns (AdHocProfilesUploadResponse) {}
  rpc Get(AdHocProfilesGetRequest) returns (AdHocProfilesGetResponse) {}
  rpc List(AdHocProfilesListRequest) returns (AdHocProfilesListResponse) {}
}

message AdHocProfilesUploadRequest {
  string name = 1;
  string profile = 2;
}

message AdHocProfilesUploadResponse {
  string id = 1;
  types.v1.FlameGraph flamegraph = 2;
  repeated string sample_types = 3;
}

message AdHocProfilesGetRequest {
  string id = 1;
  optional string sample_type = 2;
}

message AdHocProfilesGetResponse {
  string id = 1;
  string name = 2;
  string sample_type = 3;
  types.v1.FlameGraph flamegraph = 4;
  repeated string sample_types = 5;
}

message AdHocProfilesListRequest {}

message AdHocProfilesListResponse {
  repeated AdHocProfilesProfileMeta profiles = 1;
}

message AdHocProfilesProfileMeta {
  string id = 1;
  string name = 2;
}
